Fix the first review comments

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
   </header>
   <!-- Основной контент -->
   <main>
-    <section class="portfolio-section">
-      <div class="container container-margin"">
+    <section class="portfolio-section section-margin">
+      <div class="container"">
                <h1 hidden>Примеры работ</h1>
                <ul class=" portfolio-btn-list list">
         <li class="portfolio-btn-item">
@@ -136,8 +136,8 @@
     </section>
   </main>
   <!-- Подвал -->
-  <footer class="footer">
-    <div class="container container-margin">
+  <footer class="footer portfolio-footer">
+    <div class="container container-footer">
       <a class="logo link logo-footer" href="./index.html">Web<span class="logo-white">Studio</span></a>
       <!-- Список контактов -->
       <address class="footer-contact">
