Fix second review css rules

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
   </header>
   <!-- Основной контент -->
   <main>
-    <section class="portfolio-section section-margin">
+    <section class="portfolio-section section-padding">
       <div class="container"">
                <h1 hidden>Примеры работ</h1>
                <ul class=" portfolio-btn-list list">
