--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
     </section>
   </main>
   <!-- Подвал -->
-  <footer class="footer portfolio-footer">
+  <footer class="footer">
     <div class="container container-footer">
       <a class="logo link logo-footer" href="./index.html">Web<span class="logo-white">Studio</span></a>
       <!-- Список контактов -->
